# dsba

./: README.md
Sat1-22-05-2021/4-Table-Del-Save/Table/: CMakeLists.txt  addwindow.cpp  addwindow.h  addwindow.ui  delegate.cpp  delegate.h  detailwindow.cpp  detailwindow.h  detailwindow.ui  globalvariables.cpp  globalvariables.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.ui  student.h
Sat2-29-05-2021/sorting-filtering/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
consultation-20-03-2021/cities/: cities.cpp  cities.csv  cities.h  main.cpp
ws-21-06-2021/: stdfunction-example.cpp
ws-21-06-2021/last-topics/: exercise.cpp  main.cpp  number.h  person.h  shape.h  smartpointer.h
ws1-13-01-2021/hello-world-project/: CMakeLists.txt
ws10-12-02-2021/test-11-02-2021/: task1.cpp  task2.cpp
ws11-17-02-2021/: 1-map-construction.cpp  2-map-insertion.cpp  3-map-find-erase.cpp  4-map-task1.cpp  5-set-construction.cpp  6-set-comparison.cpp  7-set-task2.cpp
ws11-17-02-2021/exercises/: group1.cpp  group2.cpp
ws11-17-02-2021/misc/: 0-iterators.cpp  1-aliases.cpp
ws12-19-02-2021/: 1-iterator-del.cpp  2-iterator-add.cpp
ws13-24-02-2021/: 0-less.cpp  1-less-vector.cpp  2-custom-comp.cpp  3-custom-comp-str.cpp  4-range.cpp  5-bounds.cpp  6-buckets.cpp  7-exercise.cpp
ws14-26-02-2021/: task1.cpp  task2.cpp
ws15-03-03-2021/exercise/: cities.h
ws16-05-03-2021/exercise1-cities/: main.cpp
ws17-10-03-2021/: main.cpp
ws18-12-03-2021/compare-styles/: compare1.cpp  compare2.cpp
ws18-12-03-2021/football/: football.cpp  football.h  main.cpp
ws18-12-03-2021/random-styles/: random1.cpp  random2.cpp
ws19-17-03-2021/vector3d/: main.cpp  vector3d.cpp  vector3d.h
ws20-19-03-2021/BigInteger/: biginteger.cpp  biginteger.h  main.cpp
ws21-24-03-2021/: 1-exception-first-example.cpp  2-out-of-range.cpp  3-length-error.cpp  4-inline-first-example.cpp  5-inline-class.cpp  6-static-first-example.cpp  7-static-second-example.cpp
ws22-26-03-2021/test-25-03-2021/: main.cpp  solution.h  students.csv
ws23-05-04-2021/: 1-templates-swap.cpp  2-templates-arrays.cpp  3-templates-vectors.cpp  4-templates-containers.cpp  5-templates-maps.cpp  7-task.cpp  8-enums.cpp  9-enums-setvalues.cpp
ws23-05-04-2021/6-templates-classes/: list.cpp  list.h  main.cpp
ws25-12-04-2021/: conversions.cpp  task1.cpp  task2.cpp
ws26-15-04-2021/assembly/: toAssembly.cpp  toAssembly.s
ws26-15-04-2021/gtest-clion/: CMakeLists.txt
ws26-15-04-2021/gtest-clion/MyTest/: CMakeLists.txt  main.cpp
ws26-15-04-2021/gtest-qtcreator/MyTest/: CMakeLists.txt  main.cpp  tst_mycase.h
ws27-19-04-2021/: cities.cpp  tuples.cpp
ws28-22-04-2021/: task1.cpp  task2.cpp
ws3-20-01-2021/: 1-forloop.cpp  10-break-continue.cpp  2-expressions.cpp  3-increment-operator.cpp  4-while.cpp  5-time-delay.cpp  6-do-while.cpp  7-ifelse.cpp  8-ternary-conditional.cpp  9-switch.cpp
ws40-10-06-2021/: main.cpp  safe_array.h
ws41-14-06-2021/: main.cpp  safe_matrix.h
ws42-17-06-2021/: main.cpp  person.cpp  person.h
ws5-27-01-2021/: 0-line.cpp  1-line.cpp  2-isspace.cpp  3-delimiter.cpp  4-sstream-number-to-string.cpp  5-sstream-string-to-number.cpp  6-sstream-variables.cpp  7-sstream-token.cpp  8-exercise4.cpp
ws6-29-01-2021/: 0-function.cpp  1-byvalue-simple.cpp  10-file-read.cpp  2-array.cpp  3-array2.cpp  4-ref.cpp  5-byreference.cpp  6-cstring.cpp  7-cstring2.cpp  8-cppstring.cpp  9-file-write.cpp
ws8-05-02-2021/: 0-fstream.cpp  1-generic.cpp  2-output.cpp  3-stl-sort.cpp  war-and-peace.txt
(+68 files in other folders)
